--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,13 +1,13 @@
 heading: Completed
 projects:
-  - project_name: Patio
+  - project_name: Outdoor Patio Warriewood
     project_summary: An elegant minimalist patio which serves as a extension to the
       house gifting a lovely place for that late night glass of wine.
     project_image: /assets/uploads/image02.jpg
     project_image_alt: alt text
-  - project_name: Pergola & Pool
-    project_summary: >
-      This sleek design features clean lines, a serene tiled pool a pergolas BBQ
-      area creating a contemporary outdoor sanctuary.
-    project_image: /assets/uploads/image01.jpg
-    project_image_alt: pool
+  - project_name: Oatlands Grand Entry
+    project_summary: A newly built home where the front yard was transformed into a
+      grand entrance, featuring wide-format formed concrete steps that create a
+      bold and welcoming walkway to the front door.
+    project_image: /assets/uploads/1su_looking-up-stairs-with-sago-in-view.png
+    project_image_alt: Stairs
