--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   url: "/"
 - title: Services
   url: "/services"
-- title: Projects
-  url: "#"
+- title: Process
+  url: "/process"
 - title: Contact
   url: "/contact"
