--- a/_data/projects-page.yml
+++ b/_data/projects-page.yml
@@ -1,2 +1,2 @@
-title: "PROJECTS"
-description: "Take a stroll through our completed Epic Landscapes."
+title: PROJECTS
+description: Take a stroll through our completed Epic Landscapes
