--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,7 +1,7 @@
 navigation:
   nav_bg: "#ffae4e"
 body:
-  body_bg: "#fff4c9"
+  body_bg: "#f1f1f2"
 home:
   home_bg: "#fff4c9"
 preview: Theme settings updated
