Update Projects “projects”

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 projects:
   - id: ryde-kitchen
-    title: ryde-outdoor-kitchen
+    title: ryde
     location: Ryde
     description: Outdoor kitchen and bar area with pergola and seating
     images:
