Update Projects “projects”

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -45,3 +45,9 @@ projects:
       - image: /assets/img/stairs.png
       - image: /assets/img/sunset.png
     order: 6
+  - order: 7
+    title: revesby
+    location: revesby
+    description: small secluded garden
+    images:
+      - image: /assets/uploads/catcus-post.png
