Update Process “process”

--- a/_data/process.yml
+++ b/_data/process.yml
@@ -39,7 +39,12 @@ steps:
     image: /assets/uploads/1.jpeg
     image_alt: Close-up of paved surface with various stone pavers and construction tools
   - order: 6
-    title: extras
-    description: here a are extra
+    title: Extras read about it
+    description: After a full site assessment, we develop a functional diagram to
+      confirm the layout of key features like entertaining areas, garden beds,
+      and pathways. We also create a style guide and mood board to establish a
+      consistent theme for your space. This step is crucial to ensure your
+      outdoor area flows well, and we work closely with you until you're
+      completely satisfied.
     image: /assets/uploads/site-inspection.jpg
     image_alt: man trimmming bush
