--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -4,7 +4,7 @@ navigation:
 body:
   body_bg: "#f1f1f2"
 home:
-  home_bg: "#f1f1f2"
+  home_bg: "#fff4c9"
 heading:
   heading_color: "#ffae4e"
 body_text:
@@ -12,7 +12,7 @@ body_text:
 footer:
   footer_bg: "#f1f1f2"
 homepage:
-  hero_tagline: Crafting Nature's Masterpieces, One Epic Landscape at a Time
+  hero_tagline: Crafting Nature's Masterpieces, One Epic Landscape at a Times
   logo_desktop: /assets/uploads/logo.svg
   logo_mobile: /assets/uploads/logo-mobile.svg
   logo_alt_text: Epic Landscape Designs Logo
