--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,6 +1,8 @@
 navigation:
   nav_bg: "#000"
   nav_text_color: "#f1f1f2"
+  hamburger_icon_color: "#7f1818"
+  close_icon_color: "#8f5454"
 body:
   body_bg: "#f1f1f2"
 home:
@@ -11,6 +13,7 @@ body_text:
   body_text_color: "#000"
 footer:
   footer_bg: "#f1f1f2"
+  footer_text_color: "#803131"
 homepage:
   hero_tagline: Crafting Nature's Masterpieces, One Epic Landscape at a Times
   logo_desktop: /assets/uploads/logo.svg
