--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,8 +1,8 @@
 navigation:
   nav_bg: "#000"
   nav_text_color: "#f1f1f2"
-  hamburger_icon_color: "#7f1818"
-  close_icon_color: "#8f5454"
+  hamburger_icon_color: "#111"
+  close_icon_color: "#f1f1f2"
 body:
   body_bg: "#f1f1f2"
 home:
