Update Theme Settings “theme”

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -19,7 +19,7 @@ homepage:
   logo_desktop: /assets/uploads/logo.svg
   logo_mobile: /assets/uploads/logo-mobile.svg
   logo_alt_text: Epic Landscape Designs Logo
-  nav_logo: /assets/uploads/logo-sm.svg
+  nav_logo: /assets/uploads/el-white.png
   nav_logo_alt_text: Epic Landscape Designs Logo
 navigation_menu:
   link_1:
