Update Theme Settings “theme”

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -15,7 +15,7 @@ footer:
   footer_bg: "#f1f1f2"
   footer_text_color: "#111"
 homepage:
-  hero_tagline: Crafting Nature's Masterpieces, One Epic Landscape at a Times
+  hero_tagline: Crafting Nature's Masterpieces, One Epic Landscape at a Time
   logo_desktop: /assets/uploads/logo.svg
   logo_mobile: /assets/uploads/logo-mobile.svg
   logo_alt_text: Epic Landscape Designs Logo
