--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,8 +1,8 @@
 navigation:
-  nav_bg: "#000"
-  nav_text_color: "#f1f1f2"
+  nav_bg: "#f1f1f2"
+  nav_text_color: "#545454"
   hamburger_icon_color: "#111"
-  close_icon_color: "#f1f1f2"
+  close_icon_color: "#545454"
 body:
   body_bg: "#f1f1f2"
 home:
@@ -19,7 +19,7 @@ homepage:
   logo_desktop: /assets/uploads/logo.svg
   logo_mobile: /assets/uploads/logo-mobile.svg
   logo_alt_text: Epic Landscape Designs Logo
-  nav_logo: /assets/uploads/el-white.png
+  nav_logo: /assets/uploads/logo-sm.svg
   nav_logo_alt_text: Epic Landscape Designs Logo
 navigation_menu:
   link_1:
