Update Theme Settings “theme”

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -15,9 +15,9 @@ footer:
   footer_bg: "#f1f1f2"
   footer_text_color: "#111"
 homepage:
-  hero_tagline: Crafting Nature's Masterpieces, One Epic Landscape at a Time
+  hero_tagline: Designing beautiful, buildable outdoor spaces that elevate everyday living
   logo_desktop: /assets/uploads/logo.svg
-  logo_mobile: /assets/uploads/logo-mobile.svg
+  logo_mobile: /assets/uploads/epic-landscape-designs-4-.svg
   logo_alt_text: Epic Landscape Designs Logo
   nav_logo: /assets/uploads/logo-sm.svg
   nav_logo_alt_text: Epic Landscape Designs Logo
