Update Theme Settings “theme”

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -16,7 +16,7 @@ footer:
   footer_text_color: "#111"
 homepage:
   hero_tagline: Designing beautiful, buildable outdoor spaces that elevate everyday living
-  logo_desktop: /assets/uploads/logo.svg
+  logo_desktop: /assets/uploads/epic-landscape-designs-4-.svg
   logo_mobile: /assets/uploads/epic-landscape-designs-4-.svg
   logo_alt_text: Epic Landscape Designs Logo
   nav_logo: /assets/uploads/logo-sm.svg
