Update Pages “process-page”

--- a/_data/process-page.yml
+++ b/_data/process-page.yml
@@ -1,2 +1,8 @@
 title: PROCESS
-description: Our design process from design to construction 
+description: >-
+  A great outdoor space starts with clear direction and thoughtful design.
+
+  We guide you through a streamlined process that blends creativity with practical detail, ensuring your landscape isn’t just beautiful on paper — it’s buildable in the real world. Having a clear design sets the entire build up for success from day one, no matter the size or style of your project.
+
+
+  Every project is different, but the journey usually follows a simple, structured flow. Below is a look at how a typical landscape design comes together from first ideas to a fully buildable plan.
