--- a/_data/projects-page.yml
+++ b/_data/projects-page.yml
@@ -1,2 +1,9 @@
 title: PROJECTS
-description: Take a stroll through our completed Epic Landscapes completed over the years
+description: >-
+  Our projects showcase the kind of landscapes we love to design — clear in
+  structure, creative in form and thoughtfully built for real homes and real
+  lifestyles.
+
+  Each design responds to its site, its architecture and the people who live there, resulting in outdoor spaces that feel natural, functional and effortlessly beautiful.
+
+  Explore a selection of our recent work below.
