Update Pages “contact-page”

--- a/_data/contact-page.yml
+++ b/_data/contact-page.yml
@@ -1,3 +1,5 @@
 title: CONTACT US
-description: We'd love to hear about your next landscaping project! Just fill
-  out the form and we'll get back to you right away
+description: >-
+  Have a landscape project in mind?
+
+  Share a few details with us and we’ll reach out to discuss how we can help shape a clear, creative and buildable design for your home.
