Update Pages “contact-page”

--- a/_data/contact-page.yml
+++ b/_data/contact-page.yml
@@ -1,5 +1,4 @@
 title: CONTACT US
-description: >-
-  Have a landscape project in mind?
-
-  Share a few details with us and we’ll reach out to discuss how we can help shape a clear, creative and buildable design for your home.
+description: Have a landscape project in mind? Share a few details with us and
+  we’ll reach out to discuss how we can help shape a clear, creative and
+  buildable design for your home.
