--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 projects:
   - id: ryde-kitchen
-    title: ryde
+    title: "Boutique Pergola "
     location: Ryde
     description: Outdoor kitchen and bar area with pergola and seating
     images:
@@ -8,58 +8,14 @@ projects:
       - image: /assets/uploads/2.jpeg
       - image: /assets/uploads/3.jpeg
     order: 1
-  - title: castle hill
-    location: Castle Hill
-    description: Outdoor kitchen and bar setup with stepping stones in a garden
+  - title: Tropical Oasis
+    location: Sans Souci
+    description: Tropical themed front to back plus courtyard.
     images:
       - image: /assets/img/stairs.png
       - image: /assets/img/sunset.png
     order: 2
-  - title: parramatta
-    location: Parramatta
-    description: Modern exterior with large windows and minimalist front garden
-    images:
-      - image: /assets/img/stairs.png
-      - image: /assets/img/sunset.png
-    order: 3
-  - title: lane cove
-    location: Lane Cove
-    description: Sunken outdoor lounge area with fire pit and white built-in seating
-    images:
-      - image: /assets/img/stairs.png
-      - image: /assets/img/sunset.png
-    order: 4
-  - id: ryde-pool
-    title: annandale
-    location: Ryde
-    description: Swimming pool with wooden decking surrounded by lush tropical plants
-    images:
-      - image: /assets/img/stairs.png
-      - image: /assets/img/sunset.png
-    order: 5
-  - title: oatlands
-    location: Oatlands
-    description: Desert-style garden featuring various cacti and succulents around a
-      circular fire pit
-    images:
-      - image: /assets/img/stairs.png
-      - image: /assets/img/sunset.png
-    order: 6
-  - order: 7
-    title: revesby
-    location: revesby
-    description: small secluded garden
-    images:
-      - image: /assets/uploads/catcus-post.png
-  - order: 8
-    title: winston hills
-    location: winston hills
-    description: pool in winston hills
-    images:
-      - image: /assets/uploads/site-inspection.jpg
-  - order: 9
-    title: dover heights
-    location: boutique garden in dover heights
-    description: boutique garden in dover heights
-    images:
-      - image: /assets/uploads/s6xshdnwuztnqsedijxjqp.jpg
+  - order: 3
+    title: Coming Soon
+    location: Coming Soon
+    description: Coming Soon
