Update Process “process”

--- a/_data/process.yml
+++ b/_data/process.yml
@@ -32,9 +32,9 @@ steps:
     image_alt: White Background
   - order: 5
     title: construction
-    description: Lastly we assign the right builder from our trusted network. Chosen
-      specifically for your project's needs. Each builder we recommend shares
-      our values and commitment to quality, ensuring a smooth transition into
-      construction and a final result that stays true to the design.
+    description: If you’d like support through to construction, we can connect you
+      with trusted builders in our network who align with the design, budget,
+      and level of detail required. Many clients choose this for a smoother
+      handover — but you're always free to use your own preferred builder.
     image: /assets/uploads/whitebackground-image.png
     image_alt: White Background
