--- a/_data/process.yml
+++ b/_data/process.yml
@@ -4,7 +4,7 @@ steps:
     description: First, we have a meeting to discuss your vision, lifestyle, and
       budget. After this consultation with your Principal Landscape Designer,
       we'll provide a tailored proposal for your approval.
-    image: /assets/uploads/landscape-drawing.jpg
+    image: /assets/uploads/consult.jpg
     image_alt: White Background
   - order: 2
     title: functional design
@@ -14,21 +14,21 @@ steps:
       consistent theme for your space. This step is crucial to ensure your
       outdoor area flows well, and we work closely with you until you're
       completely satisfied.
-    image: /assets/uploads/whitebackground-image.png
+    image: /assets/uploads/bernd-dittrich-966_0a195ue-unsplash.jpg
     image_alt: White Background
   - order: 3
     title: concept plan
     description: Next, we refine your design, positioning all elements precisely
       using accurate scaled drawings. We work with you to select materials,
       plants, and finishes that bring your concept to life and suit your space.
-    image: /assets/uploads/garden-bed-example.png
+    image: /assets/uploads/“-1-.png
     image_alt: White Background
   - order: 4
     title: hand over package
     description: You'll receive a completed design package, ready to build your
       dream landscape, which includes your concept plan, planting schedule,
       material selection and any 3D renders/perspectives.
-    image: /assets/uploads/desert-mood-board.png
+    image: /assets/uploads/cover-photo-mood-bo.png
     image_alt: White Background
   - order: 5
     title: construction
