Update Process “process”

--- a/_data/process.yml
+++ b/_data/process.yml
@@ -14,7 +14,7 @@ steps:
       consistent theme for your space. This step is crucial to ensure your
       outdoor area flows well, and we work closely with you until you're
       completely satisfied.
-    image: /assets/uploads/bernd-dittrich-966_0a195ue-unsplash.jpg
+    image: /assets/uploads/desert-mood-board.png
     image_alt: White Background
   - order: 3
     title: concept plan
