Update Process “process”

--- a/_data/process.yml
+++ b/_data/process.yml
@@ -36,5 +36,5 @@ steps:
       with trusted builders in our network who align with the design, budget,
       and level of detail required. Many clients choose this for a smoother
       handover — but you're always free to use your own preferred builder.
-    image: /assets/uploads/whitebackground-image.png
+    image: /assets/uploads/simple-garden-example.jpg
     image_alt: White Background
